--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "node-js-jwt-auth-postgresql",
+  "name": "auth-backend",
   "version": "1.0.0",
   "description": "Node.js Demo for JWT Authentication with PostgreSQL",
-  "main": "server.js",
+  "main": "server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "build": "node server.js -d dist"
+    "start": "ts-node app/server.ts",
+    "build": "tsc",
+    "dev": "nodemon --watch 'src/**/*.ts' --exec \"npx ts-node\" app/server.ts"
   },
   "keywords": [
     "node js",
@@ -15,7 +16,7 @@
     "authentication",
     "postgresql"
   ],
-  "author": "bezkoder",
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -24,6 +25,18 @@
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.5",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.3"
+    "reflect-metadata": "^0.2.2",
+    "sequelize": "^6.37.3",
+    "typeorm": "^0.3.20"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/node": "^20.12.12",
+    "nodemon": "^3.1.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   }
 }
